@@ -60,6 +60,7 @@ o set the return type of the parse functions to "void"
 o use the comma operator instead of curly braces
 o add missing function prototypes
 o merge several *_alarm() functions into init_alarm()
+o use add_alarm() in mod_alarm() to avoid code duplication
 
 version 0.9.5 (2007/07/29)
 ------------------------------
